I want to make this app to be google play and app store ready, also need

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,11 @@
 {
-  "name": "FiscalFlow",
-  "short_name": "FiscalFlow",
-  "description": "Your personal finance tracker",
+  "name": "Centsei",
+  "short_name": "Centsei",
+  "description": "Your personal finance sensei.",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#22577A",
+  "theme_color": "#38A3A5",
   "icons": [
     {
       "src": "/icon-192x192.png",
@@ -13,9 +17,5 @@
       "sizes": "512x512",
       "type": "image/png"
     }
-  ],
-  "theme_color": "#38A3A5",
-  "background_color": "#E0E5D9",
-  "start_url": "/",
-  "display": "standalone"
+  ]
 }
